--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/core": "^10.0.14",
     "gatsby": "^2.13.34",
     "gatsby-plugin-emotion": "^4.1.2",
+    "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-typography": "^2.3.2",
     "gatsby-source-contentstack": "^1.0.2",
     "gatsby-source-filesystem": "^2.1.6",
