--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@emotion/core": "^10.0.14",
     "gatsby": "^2.13.34",
+    "gatsby-cli": "^2.7.21",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-typography": "^2.3.2",
     "gatsby-source-contentstack": "^1.0.2",
     "gatsby-source-filesystem": "^2.1.6",
     "gatsby-transformer-remark": "^2.6.9",
+    "global": "^4.4.0",
     "rbx": "^2.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
